# ChangeLog for dev-perl/locale-maketext-lexicon
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/locale-maketext-lexicon/ChangeLog,v 1.73 2012/03/31 17:01:53 armin76 Exp $

  31 Mar 2012; Raúl Porcel <armin76@gentoo.org>
  locale-maketext-lexicon-0.910.0.ebuild:
  ia64/sparc stable wrt #400301

  31 Mar 2012; Tobias Klausmann <klausman@gentoo.org>
  locale-maketext-lexicon-0.910.0.ebuild:
  Stable on alpha, bug #400301

  09 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  locale-maketext-lexicon-0.910.0.ebuild:
  x86 stable wrt bug #400301

  24 Feb 2012; Jeroen Roovers <jer@gentoo.org>
  locale-maketext-lexicon-0.910.0.ebuild:
  Stable for HPPA (bug #400301).

  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org>
  locale-maketext-lexicon-0.910.0.ebuild:
  Stable for amd64, wrt bug #400301

  04 Sep 2011; Torsten Veller <tove@gentoo.org>
  -locale-maketext-lexicon-0.870.0.ebuild,
  -locale-maketext-lexicon-0.880.0.ebuild:
  Cleanup

*locale-maketext-lexicon-0.910.0 (21 Aug 2011)

  21 Aug 2011; Torsten Veller <tove@gentoo.org>
  +locale-maketext-lexicon-0.910.0.ebuild:
  Version bump

*locale-maketext-lexicon-0.880.0 (01 Aug 2011)

  01 Aug 2011; Torsten Veller <tove@gentoo.org>
  +locale-maketext-lexicon-0.880.0.ebuild:
  Version bump

  29 Jul 2011; Torsten Veller <tove@gentoo.org>
  -locale-maketext-lexicon-0.860.ebuild:
  Cleanup

*locale-maketext-lexicon-0.870.0 (20 Jul 2011)

  20 Jul 2011; Torsten Veller <tove@gentoo.org>
  +locale-maketext-lexicon-0.870.0.ebuild:
  Version bump

  02 Apr 2011; Torsten Veller <tove@gentoo.org>
  -locale-maketext-lexicon-0.840.ebuild, -locale-maketext-lexicon-0.850.ebuild:
  Cleanup

*locale-maketext-lexicon-0.860 (16 Feb 2011)

  16 Feb 2011; Torsten Veller <tove@gentoo.org>
  +locale-maketext-lexicon-0.860.ebuild:
  Version bump

*locale-maketext-lexicon-0.850 (12 Feb 2011)

  12 Feb 2011; Torsten Veller <tove@gentoo.org>