@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/locale-maketext-lexicon
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/locale-maketext-lexicon/ChangeLog,v 1.73 2012/03/31 17:01:53 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/locale-maketext-lexicon/ChangeLog,v 1.74 2012/04/05 18:28:44 tove Exp $
+
+  05 Apr 2012; Torsten Veller <tove@gentoo.org>
+  -locale-maketext-lexicon-0.82.ebuild:
+  Cleanup
 
   31 Mar 2012; Raúl Porcel <armin76@gentoo.org>
   locale-maketext-lexicon-0.910.0.ebuild:
